--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,6 +4,12 @@ metadata:
   name: vskajabi
   description: |
     VSCode extension for working with Sage @ Kajabi
+  tags:
+    - vscode
+    - extension
+    - javascript
+    - typescript
+    - sage
   annotations:
     backstage.io/source-location: url:https://github.com/Kajabi/vskajabi/tree/main
     github.com/project-slug: Kajabi/vskajabi
